front-envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/service/1"
                route:
                  cluster: service1
              - match:
                  prefix: "/service/2"
                route:
                  cluster: service2
              rate_limits:
#              - actions:
#                - header_value_match:
#                    descriptor_value: quote-path-auth
#                    expect_match: false
#                    headers:
#                    - name: "Authorization"
#                stage: 0
              - actions:
                - remote_address: {}
          http_filters:
#          - name: envoy.rate_limit
#              config:
#                domain: apis
#                stage: 1
#                request_type: external
#                failure_mode_deny: true
#                rate_limit_service:
#                  grpc_service:
#                    envoy_grpc:
#                      cluster_name: ratelimit

#         Config example:  https://www.envoyproxy.io/docs/envoy/latest/api-v2/config/filter/http/rate_limit/v2/rate_limit.proto#config-filter-http-rate-limit-v2-ratelimit
#         Working example: https://github.com/salrashid123/envoy_ratelimit
          - name: envoy.rate_limit
            config:
              domain: ysv
              stage: 0
              request_type: external
              failure_mode_deny: true
              rate_limit_service:
                grpc_service:
                  envoy_grpc:
                    cluster_name: ratelimit
          - name: envoy.filters.http.router
            typed_config: {}
  clusters:
  - name: ratelimit
    type: strict_dns
    connect_timeout: 0.25s
    lb_policy: ROUND_ROBIN
    hosts: [{ socket_address: { address: ratelimit, port_value: 8081 }}]
    http2_protocol_options: {}

  - name: service1
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    http2_protocol_options: {}
    load_assignment:
      cluster_name: service1
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: service1
                port_value: 80
  - name: service2
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    http2_protocol_options: {}
    load_assignment:
      cluster_name: service2
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: service2
                port_value: 80

admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
